# theWowBaggers

./: .gitignore  README.md
control_node/: CMakeLists.txt  mainpage.dox  manifest.xml  manifest.xml~
control_node/headers/: PathController.h  PathController.h~
control_node/scripts/: PathFollow.py  PathFollow.py~  (+3 more)
control_node2/: CMakeLists.txt  mainpage.dox  manifest.xml
elevation_mapping/: CMakeLists.txt  mainpage.dox  manifest.xml
kinect_pitch/: mainpage.dox  manifest.xml  manifest.xml~
tedusar_collision_checker/: CMakeLists.txt  mainpage.dox  manifest.xml
tedusar_laser_alignment/: CMakeLists.txt  mainpage.dox  manifest.xml
tedusar_localisation/: mainpage.dox  manifest.xml
tedusar_mesa_element/: CMakeLists.txt  mainpage.dox  manifest.xml
tedusar_mesa_element/include/tedusar_mesa_element/: mesa_element.h  mesa_element_config.h  mesa_element_node.h  mesa_element_state.h
tedusar_mesa_element/launch/: tedusar_mesa_element.launch  tedusar_mesa_element_urdf.launch
tedusar_mesa_element/meshes/: mesa_body.stl  mesa_left_track.stl  mesa_right_track.stl
tedusar_mesa_element/qtcreator-build/: CMakeCache.txt  Makefile  cmake_install.cmake  tedusar_mesa_element.cbp
tedusar_mesa_element/qtcreator-build/catkin_generated/: env_cached.sh  generate_cached_setup.py  setup_cached.sh
tedusar_mesa_element/qtcreator-build/devel/: .catkin  .rosinstall  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
tedusar_mesa_element/qtcreator-build/gtest/: Makefile  gtest.cbp
tedusar_mesa_element/smart_motor_program/: tedusar_left_motor.sms  tedusar_right_motor.sms
tedusar_mesa_element/src/: mesa_element.cpp  mesa_element_node.cpp
tedusar_mesa_element/urdf/: mesa_element.urdf.xacro
tedusar_sensor_head/: CMakeLists.txt  mainpage.dox  manifest.xml
tedusar_wowbagger/: mainpage.dox  manifest.xml  wowbagger.urdf
tedusar_wowoctolaunch/: manifest.xml
wowoctolaunch/: mainpage.dox
(+31 files in other folders)
